--- a/templates/hal_admin/dokter/detail_rawatinap.html
+++ b/templates/hal_admin/dokter/detail_rawatinap.html
@@ -19,7 +19,7 @@ Detail Rawat Inap Pasien
     <div class="header-body">
       <div class="row align-items-center py-4">
         <div class="col-lg-6 col-7">
-          <h6 class="h2 text-white d-inline-block mb-0">Data Pasien</h6>
+          <h6 class="h2 text-white d-inline-block mb-0">Data Pasien Rawat Inap</h6>
         </div>
         <div class="col-lg-6 col-5 text-right">
           <!-- <a
@@ -40,7 +40,7 @@ Detail Rawat Inap Pasien
         <!-- Card header -->
         <!-- {{ request.get_host }}{{ request.get_full_path }} -->
         <div class="card-header">
-          <h3 class="mb-0">Periksa Pasien </h3>
+          <h3 class="mb-0">Data Pasien</h3>
         </div>
         {% comment %} {{data.iddokter}} {% endcomment %}
         <!-- Card body -->
