--- a/templates/hal_admin/pegawaiadmin/home.html
+++ b/templates/hal_admin/pegawaiadmin/home.html
@@ -12,13 +12,15 @@ Halaman Pegawai Administrasi
 {% endblock header %}
 {% block konten %}
 
+{% if sessionnya == "pegawai_admin" %}
 <div class="header bg-success ">
     <div class="container-fluid">
         <div class="container text-center">
             <div class="card">
                 <div class="card-body">
                     <blockquote class="blockquote mb-0">
-                        <footer class="blockquote">Selamat datang di halaman Pegawai Administrasi <b> {{ namaakun }}</footer>
+                        <footer class="blockquote">Selamat datang di eSehat Klinik Az-Zainiyah <b> {{ namaakun }}
+                        </footer>
                         <p>Semoga harimu menyenangkan. 😊️</p>
                     </blockquote>
                 </div>
@@ -163,7 +165,44 @@ Halaman Pegawai Administrasi
         </div>
     </div>
 </div>
-{% comment %} 
+{% endif %}
+
+{% if sessionnya == "perawat" %}
+<div class="header bg-success ">
+    <div class="container-fluid">
+        <div class="header-body">
+            <div class="row align-items-center py-4">
+                <div class="col-lg-6 col-7">
+                    <h6 class="h2 text-white d-inline-block mb-0">Dashboard Perawat</h6>
+                    <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
+                        <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
+                            <li class="breadcrumb-item">
+                                <a href="{% url 'pegawaiadmin:index_pegawaiadmin' %}">
+                                    <i class="fas fa-home"></i>
+                                </a>
+                            </li>
+                            <li class="breadcrumb-item active" aria-current="page">Dashboards</li>
+                        </ol>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Page content -->
+<div class="container text-center">
+    <div class="card mt-4">
+        <div class="card-body">
+          <blockquote class="blockquote mb-0">
+            <footer class="blockquote">Selamat datang di halaman Dokter <b> dr.{{ namaakun }}</footer>
+            <p>Semoga harimu menyenangkan. 😊️</p>
+        </blockquote>
+        </div>
+    </div>
+</div>
+{% endif %}
+{% comment %}
 <div class="container text-center">
     <div class="card mt-4">
         <div class="card-body">
