--- a/templates/hal_admin/pegawaiadmin/lembaga.html
+++ b/templates/hal_admin/pegawaiadmin/lembaga.html
@@ -1,7 +1,7 @@
 {% extends "hal_admin/base.html" %}{% load static %}
 
 {% block title %}
-    Data User
+    Data Lembaga
 {% endblock title %}
 {% block header %}
     <link
@@ -22,7 +22,7 @@
         <div class="header-body">
             <div class="row align-items-center py-4">
                 <div class="col-lg-6 col-7">
-                    <h6 class="h2 text-white d-inline-block mb-0">Data User</h6>
+                    <h6 class="h2 text-white d-inline-block mb-0">Data Lembaga</h6>
                     <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
                         <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                             <li class="breadcrumb-item">
@@ -30,15 +30,14 @@
                                     <i class="fas fa-home"></i>
                                 </a>
                             </li>
-                            <li class="breadcrumb-item active" aria-current="page">User</li>
+                            <li class="breadcrumb-item active" aria-current="page">Lembaga</li>
                         </ol>
                     </nav>
                 </div>
                 <div class="col-lg-6 col-5 text-right">
                     <a
-                        href="{% url 'pegawaiadmin:tambahuser' %}"
-                        class="btn btn-sm btn-neutral">Tambah Data User</a>
-                    <!--  -->
+                        href="{% url 'pegawaiadmin:tambahlembaga' %}"
+                        class="btn btn-sm btn-neutral">Tambah Lembaga</a>
                 </div>
             </div>
         </div>
@@ -50,34 +49,23 @@
     <div class="row">
         <div class="col">
             <div class="card">
-                <!-- Card header -->
-                <div class="card-header">
-                    <h3 class="mb-0">User Klinik Az-Zainiyah</h3>
-                    <p class="text-sm mb-0">
-                        Berikut ini adalah User yang ada di Klinik Az-Zainiyah.
-                    </p>
-                </div>
                 <div class="table-responsive py-4">
                     <table class="table table-flush" id="datatable-buttons">
                         <thead class="thead-light">
                             <tr>
                                 <th>No.</th>
-                                <th>Akun</th>
-                                <th>Pegawai</th>
-                                <th>Jenis Akun</th>
+                                <th>Nama Lembaga</th>
                                 <th>Action</th>
                             </tr>
                         </thead>
                         <tbody>
-                            {% for user in data %}
+                            {% for lembaga in data %}
                             <tr>
                                 <td>{{forloop.counter}}</td>
-                                <td>{{user.akun}}</td>
-                                <td>{{user.pegawai}}</td>
-                                <td>{{user.jenis_akun}}</td>
+                                <td>{{lembaga.nama_lembaga}}</td>
                                 <td>
-                                    <input type="button" class="btn btn-outline-info btn-sm" onclick="location.href='{% url 'pegawaiadmin:edituser' user.id  %}'" value=" Edit">
-                                    <a type="button" class="btn btn-outline-danger btn-sm" href="{% url 'pegawaiadmin:hapususer' user.id  %}" onclick="return confirm('Anda yakin mau menghapus data ini?');"> Hapus</a>                                  </td>                               
+                                    <input type="button" class="btn btn-outline-info btn-sm" onclick="location.href='{% url 'pegawaiadmin:editlembaga' lembaga.id  %}'" value=" Edit">
+                                    <a type="button" class="btn btn-outline-danger btn-sm" href="{% url 'pegawaiadmin:hapuslembaga' lembaga.id  %}" onclick="return confirm('Anda yakin mau menghapus data ini?');"> Hapus</a></td>
                             </tr>
                             {% endfor %}                            
                         </tbody>
