--- a/templates/hal_utama/index.html
+++ b/templates/hal_utama/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"> {% endcomment %}
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Pelayanan Klinik Az-Zainiyah</title>
+    <link rel="icon" href="{% static 'hal_admin/img/brand/esehatbul.png' %}" sizes="32x32">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
     <!-- Icons -->
@@ -17,8 +18,9 @@
     <script src="//cdn.tinymce.com/4/tinymce.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!-- primary: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -31,110 +33,131 @@
             <div class="container text-center">
               <div class="card-bg-success mt-4">
                 <div class="card-body">
-                  <img src="{% static 'hal_admin/img/brand/logo e-sehat land.png' %}" width="100">
-                  <blockquote class="blockquote mb-0">
-                        <p>Selamat Datang di</p>
-                        <footer class="blockquote"><b>Portal e-Sehat</b> Klinik Az-Zainiyah</footer>
+                  <img src="{% static 'hal_admin/img/brand/logo e-sehat land.png' %}" width="150">
+                  <blockquote class="blockquote mb-0 mt-3">
+                        <h3>Selamat Datang di</h3>
+                        <h1 class="blockquote"><b>Portal e-Sehat</b> Klinik Az-Zainiyah</h1>
                       </blockquote>
-                  </div>
-              </div>
-          </div>
-          </section>
-    
-          <!-- Main content -->
-          <div class="header bg-gradient pb-4 pt-5 pt-md-4">
-            <div class="container-fluid">
-              <div class="header-body">
-                <!-- Card stats -->
-                <div class="row">
-                  <div class="col-xl-3 col-lg-6">
-                    <div class="card card-stats mb-4 mb-xl-0">
-                      <div class="card-body">
-                        <div class="row">
-                          <div class="col" >
-                            <h5 class="card-title text-uppercase text-muted mb-0">Traffic</h5>
-                            <span class="h2 font-weight-bold mb-0">350,897</span>
-                          </div>
-                          <div class="col-auto">
-                            <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
-                              <i class="fas fa-chart-bar"></i>
-                            </div>
-                          </div>
-                        </div>
-                        <p class="mt-3 mb-0 text-muted text-sm">
-                          <span href="#" class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
-                          <span class="text-nowrap">Since last month</span>
-                        </p>
-                      </div>
                     </div>
                   </div>
-                  <div class="col-xl-3 col-lg-6">
-                    <div class="card card-stats mb-4 mb-xl-0">
-                      <div class="card-body">
-                        <div class="row">
-                          <div class="col">
-                            <h5 class="card-title text-uppercase text-muted mb-0">New users</h5>
-                            <span class="h2 font-weight-bold mb-0">2,356</span>
-                          </div>
-                          <div class="col-auto">
-                            <div class="icon icon-shape bg-warning text-white rounded-circle shadow">
-                              <i class="fas fa-chart-pie"></i>
+                </div>
+              </section>
+              
+              <!-- Main content -->
+              <div class="main-content">
+                <!-- Navbar -->
+                <div class="header bg-gradient pb-8 pt-2 pt-md-2">
+                  <div class="container-fluid">
+                    <div class="header-body">
+                      <!-- Card stats -->
+                      <div class="row">
+                        <div class="col-xl-3 col-lg-8">
+                          <div class="card card-stats mb-4 mb-xl-0">
+                            <div class="card-body">
+                              <div class="row">
+                                <div class="col" >
+                                  <h5 class="card-title text-muted mb-0">User Login as</h5>
+                                  <span class="h2 font-weight-bold mb-0">Pegawai Admin</span>
+                                </div>
+                                <div class="col-auto">
+                                  <div class="icon icon-shape bg-info text-white rounded-circle shadow">
+                                    <i class="fas fa-users text-white"></i>
+                                  </div>
+                                </div>
+                              </div>
+                              <p class="mt-3 mb-0 text-muted flex">
+                                <a href="{% url 'akun:login' %}" class="btn btn-info">Login <i class="fa fa-arrow-circle-right"></i></a>
+                              </p>
                             </div>
                           </div>
                         </div>
-                        <p class="mt-3 mb-0 text-muted text-sm">
-                          <span class="text-danger mr-2"><i class="fas fa-arrow-down"></i> 3.48%</span>
-                          <span class="text-nowrap">Since last week</span>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-xl-3 col-lg-6">
-                    <div class="card card-stats mb-4 mb-xl-0">
-                      <div class="card-body">
-                        <div class="row">
-                          <div class="col">
-                            <h5 class="card-title text-uppercase text-muted mb-0">Sales</h5>
-                            <span class="h2 font-weight-bold mb-0">924</span>
-                          </div>
-                          <div class="col-auto">
-                            <div class="icon icon-shape bg-yellow text-white rounded-circle shadow">
-                              <i class="fas fa-users"></i>
+            
+                        <div class="col-xl-3 col-lg-8">
+                          <div class="card card-stats mb-4 mb-xl-0">
+                            <div class="card-body">
+                              <div class="row">
+                                <div class="col" >
+                                  <h5 class="card-title text-muted mb-0">User Login as</h5>
+                                  <span class="h2 font-weight-bold mb-0">Perawat</span>
+                                </div>
+                                <div class="col-auto">
+                                  <div class="icon icon-shape bg-success text-white rounded-circle shadow">
+                                    <i class="fas fa-users text-white"></i>
+                                  </div>
+                                </div>
+                              </div>
+                              <p class="mt-3 mb-0 text-muted flex">
+                                <a href="{% url 'akun:login' %}" class="btn btn-success">Login <i class="fa fa-arrow-circle-right"></i></a>
+                              </p>
                             </div>
                           </div>
                         </div>
-                        <p class="mt-3 mb-0 text-muted text-sm">
-                          <span class="text-warning mr-2"><i class="fas fa-arrow-down"></i> 1.10%</span>
-                          <span class="text-nowrap">Since yesterday</span>
-                        </p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-xl-3 col-lg-6">
-                    <div class="card card-stats mb-4 mb-xl-0">
-                      <div class="card-body">
-                        <div class="row">
-                          <div class="col">
-                            <h5 class="card-title text-uppercase text-muted mb-0">Performance</h5>
-                            <span class="h2 font-weight-bold mb-0">49,65%</span>
-                          </div>
-                          <div class="col-auto">
-                            <div class="icon icon-shape bg-info text-white rounded-circle shadow">
-                              <i class="fas fa-percent"></i>
+            
+                        <div class="col-xl-3 col-lg-8">
+                          <div class="card card-stats mb-4 mb-xl-0">
+                            <div class="card-body">
+                              <div class="row">
+                                <div class="col" >
+                                  <h5 class="card-title text-muted mb-0">User Login as</h5>
+                                  <span class="h2 font-weight-bold mb-0">Dokter</span>
+                                </div>
+                                <div class="col-auto">
+                                  <div class="icon icon-shape bg-primary text-white rounded-circle shadow">
+                                    <i class="fas fa-users text-white"></i>
+                                  </div>
+                                </div>
+                              </div>
+                              <p class="mt-3 mb-0 text-muted flex">
+                                <a href="{% url 'akun:login' %}" class="btn btn-primary">Login <i class="fa fa-arrow-circle-right"></i></a>
+                              </p>
                             </div>
                           </div>
                         </div>
-                        <p class="mt-3 mb-0 text-muted text-sm">
-                          <span class="text-success mr-2"><i class="fas fa-arrow-up"></i> 12%</span>
-                          <span class="text-nowrap">Since last month</span>
-                        </p>
+            
+                        <div class="col-xl-3 col-lg-8">
+                          <div class="card card-stats mb-4 mb-xl-0">
+                            <div class="card-body">
+                              <div class="row">
+                                <div class="col" >
+                                  <h5 class="card-title text-muted mb-0">User Login as</h5>
+                                  <span class="h2 font-weight-bold mb-0">Super User</span>
+                                </div>
+                                <div class="col-auto">
+                                  <div class="icon icon-shape bg-danger text-white rounded-circle shadow">
+                                    <i class="fas fa-users text-white"></i>
+                                  </div>
+                                </div>
+                              </div>
+                              <p class="mt-3 mb-0 text-muted flex">
+                                <a href="#" class="btn btn-danger">Login <i class="fa fa-arrow-circle-right"></i></a>
+                              </p>
+                            </div>
+                          </div>
+                        </div>
+                        
                       </div>
                     </div>
                   </div>
                 </div>
+                <div class="container-fluid mt--7 pt-9">
+                  <footer class="footer">
+                    <div class="row align-items-center justify-content-xl-between">
+                      <div class="col-xl-6">
+                        <div class="copyright text-center text-xl-left text-muted">
+                          &copy; 2022 <a href="http://sonyhakim.pythonanywhere.com/" class="font-weight-bold ml-1" target="_blank">eSehat Klinik Az-Zainiyah</a>
+                        </div>
+                      </div>
+                      <div class="col-xl-6">
+                        <ul class="nav nav-footer justify-content-center justify-content-xl-end">
+                          <li class="nav-item">
+                            <a href="http://sonyhakim.pythonanywhere.com/" class="nav-link" target="_blank">Skripsi @Sony Hakim</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </footer>
+                </div>
               </div>
-            </div>
-          </div>
     {% endblock %}
         
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
