--- a/templates/hal_admin/pegawaiadmin/pdf.html
+++ b/templates/hal_admin/pegawaiadmin/pdf.html
@@ -4,14 +4,10 @@
 
 <body style="font-family:'Courier New'">
     <h1>
-        <font face="Courier New" size="5">Klinik Kesehatan "<i>Ndang Waras</i>"</font>
+        <font face="Courier New" size="5">Klinik "<i>Az-Zainiyah</i>"</font>
     </h1>
     <table>
         <tr>
-            <td>
-                Jl. Ngalor ngidul no 21,<br>
-                Kota Jonggol.
-            </td>
 
             <td style="padding-left:120px">(031) 1404514022</td>
         </tr>
