--- a/templates/hal_admin/base.html
+++ b/templates/hal_admin/base.html
@@ -111,23 +111,29 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#navbar-pegawai" data-toggle="collapse" role="button"
-                                aria-expanded="false" aria-controls="navbar-mhs">
-                                <i class="fa fa-book text-primary"></i>
-                                <span class="nav-link-text">Master Data</span>
+                            aria-expanded="false" aria-controls="navbar-mhs">
+                            <i class="fa fa-book text-primary"></i>
+                            <span class="nav-link-text">Master Data</span>
                             </a>
                             <div class="collapse" id="navbar-pegawai">
                                 <ul class="nav nav-sm flex-column">
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">Data Daerah</a>
+                                        <a href="{% url 'pegawaiadmin:daerah' %}" class="nav-link">Data Daerah</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="{% url 'pegawaiadmin:lembaga' %}" class="nav-link">Data Lembaga</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a href="#" class="nav-link">Data Diagnosa</a>
+                                        <a href="{% url 'pegawaiadmin:diagnosa' %}" class="nav-link">Data Diagnosa</a>
                                     </li>
                                 </ul>
                             </div>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'pegawaiadmin:laporanpemeriksaan' %}">
+                                <i class="fas fa-print text-red"></i>
+                                <span class="nav-link-text">Laporan</span>
+                            </a>
                         </li>
                         {% elif sessionnya == "perawat" %}
                         <li class="nav-item">
