--- a/templates/hal_utama/index.html
+++ b/templates/hal_utama/index.html
@@ -129,7 +129,7 @@
                                 </div>
                               </div>
                               <p class="mt-3 mb-0 text-muted flex">
-                                <a href="#" class="btn btn-danger">Login <i class="fa fa-arrow-circle-right"></i></a>
+                                <a href="{% url 'admin:login' %}" class="btn btn-danger">Login <i class="fa fa-arrow-circle-right"></i></a>
                               </p>
                             </div>
                           </div>
