--- a/templates/hal_admin/base.html
+++ b/templates/hal_admin/base.html
@@ -139,7 +139,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'pegawaiadmin:index_antrian' %}">
                                 <i class="fas fa-person-booth text-red"></i>
-                                <span class="nav-link-text">Pendaftaran Antrian</span>
+                                <span class="nav-link-text">Antrian Pasien</span>
                             </a>
                         </li>
                         {% elif sessionnya == "dokter" or sessionnya == "dokter_gigi"  %}
