--- a/templates/hal_admin/dokter/rawatinap_rekammedis.html
+++ b/templates/hal_admin/dokter/rawatinap_rekammedis.html
@@ -100,7 +100,7 @@ Data Pasien
                 </select>
               </div>
             </div>
-            <button class="btn btn-warning " type="submit">Simpan <i class="fa fa-edit ml-2"></i></button>
+            <button class="btn btn-warning btn-sm " type="submit">Simpan <i class="fa fa-edit ml-2"></i></button>
           </form>
         </div>
       </div>
