--- a/templates/hal_admin/pasien/tambahpasien.html
+++ b/templates/hal_admin/pasien/tambahpasien.html
@@ -173,7 +173,7 @@ Data Pasien
                 </div>
               </div>
             </div>
-            <button class="btn btn-primary" type="submit">Simpan</button>
+            <button class="btn btn-primary btn-sm" type="submit">Simpan</button>
 
           </form>
         </div>
