--- a/templates/hal_admin/pegawaiadmin/antrian.html
+++ b/templates/hal_admin/pegawaiadmin/antrian.html
@@ -76,7 +76,7 @@ Data Antrian
                                 <td>{{ps.tujuanpoli}}</td>
                                 {% if sessionnya == "perawat" %}
                                 <td>
-                                    <input type="button" class="btn btn-outline-warning"
+                                    <input type="button" class="btn btn-outline-warning btn-sm"
                                         onclick="location.href='{% url 'pegawaiadmin:editantrian' ps.id  %}'"
                                         value="Anamnesa"> 
                                 </td>
