--- a/templates/hal_admin/dokter/detail_rawatinap.html
+++ b/templates/hal_admin/dokter/detail_rawatinap.html
@@ -90,15 +90,15 @@ Detail Rawat Inap Pasien
             <div class="form-group row">
               <label for="example-text-input" class="col-md-2 col-form-label form-control-label">Tanggal Selesai</label>
               <div class="col-md-10">
-                <input class="form-control" type="date" name="tanggal_selesai" maxlength="200"
-                  value="{{ rInap.tanggal_selesai|date:'Y-m-d' }}" id="example-text-input">
+                <input class="form-control" type="datetime-local" name="tanggal_selesai" maxlength="200"
+                  value="{{ rInap.tanggal_selesai|date:'Y-m-d H:i' }}" id="example-text-input">
               </div>
             </div>
             <div class="d-flex justify-content-end">
               <button class="btn btn-success" type="submit">Selesai</button>
             </div>
             <hr>
-            <input type="button" class="btn btn-primary"
+            <input type="button" class="btn btn-primary btn-sm"
               onclick="location.href='{% url 'dokter:rekamrawatinap' rInap.id  %}'" value="Tambah Data" />
             <div class="table-responsive py-4">
               <table class="table table-flush" id="datatable-buttons">
