--- a/templates/hal_admin/dokter/diagnosa.html
+++ b/templates/hal_admin/dokter/diagnosa.html
@@ -78,8 +78,8 @@
                                 <td>{{pasien.ttl}}</td>
                                 <td>{{pasien.notelp}}</td>
                                 <td>
-                                    <input type="button" class="btn btn-outline-warning" onclick="location.href='{% url 'pegawaiadmin:editpasien' pasien.id  %}'" value=" Edit">
-                                    <a type="button" class="btn btn-outline-danger" href="{% url 'pegawaiadmin:hapuspasien' pasien.id  %}" onclick="return confirm('Anda yakin mau menghapus data ini?');"> Hapus</a>
+                                    <input type="button" class="btn btn-outline-warning btn-sm" onclick="location.href='{% url 'pegawaiadmin:editpasien' pasien.id  %}'" value=" Edit">
+                                    <a type="button" class="btn btn-outline-danger btn-sm" href="{% url 'pegawaiadmin:hapuspasien' pasien.id  %}" onclick="return confirm('Anda yakin mau menghapus data ini?');"> Hapus</a>
                                     <!-- <input type="button" class="btn btn-outline-danger" data-confirm="Are you sure to delete this item?" onclick="location.href='/hapusjenjang/{{data.id_pendidikan}}';" value=" Delete" /> -->
                                     
                                   </td>                               
