--- a/templates/hal_admin/pegawaiadmin/detailRekamMedis.html
+++ b/templates/hal_admin/pegawaiadmin/detailRekamMedis.html
@@ -110,7 +110,12 @@ Data Pasien
                   value="{{data.id_diagnosa3}}" required placeholder="Masukkan Diagnosa"
                   id="example-text-input">
               </div>
-          </div>          
+          </div> 
+          <div class="d-flex justify-content-end">
+            <input type="button" class="btn-sm btn-dark d-flex justify-content-end"
+            onclick="location.href='{% url 'pegawaiadmin:history' %}'"
+            value="Kembali" />
+          </div>
         </div>
 
       </div>
